tests/compile_fail/missing_use_into.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/missing_use_into.rs:7:10
  |
7 | #[derive(FromSimilar)]
  |          ^^^^^^^^^^^ expected `u32`, found `u16`
  |
  = note: this error originates in the derive macro `FromSimilar` (in Nightly builds, run with -Z macro-backtrace for more info)
